# SAVIER

./: README.md  database.py  demo_run.py  demo_seed.py  index.html  main.py  models.py  package-lock.json  package.json  print_events.py  pyproject.toml  simulate_sdk.py  worker.py
SAVIERFrontend/: package-lock.json
SAVIERFrontend/src/: App.tsx
SAVIERFrontend/src/components/dashboard/: CommandCenterTab.tsx  ExecutiveTab.tsx
SAVIERFrontend/src/components/ui/: button.tsx
agent_governance_sdk/: GUIDE.md  __init__.py  context.py  decorator.py  listeners.py  models.py  transport.py
analyzesys/: README.md  pyproject.toml  report.md
analyzesys/src/analyzesys/: crew.py  main.py
demo_files/: events.json  metadata.json  reports.json
govbreifer/: README.md  pyproject.toml  report.md
govbreifer/src/govbreifer/: crew.py  main.py
govbreifer/src/govbreifer/config/: agents.yaml  tasks.yaml
govbreifer/src/govbreifer/tools/: __init__.py  db_tools.py
govbreifer/tests/: nim_key_check.py  test_gemma.py  test_gpt_oss.py
src/: index.css
src/components/dashboard/: ComplianceTab.tsx
src/pages/: Auth.tsx  Dashboard.tsx  Landing.tsx  Projects.tsx
