[project]
name = "analyzesys"
version = "0.1.0"
description = "analyzeSys using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1",
    "litellm>=1.83.0",
]

[project.scripts]
analyzesys = "analyzesys.main:run_cli"
run_crew = "analyzesys.main:run_cli"
train = "analyzesys.main:train"
replay = "analyzesys.main:replay"
test = "analyzesys.main:test"
run_with_trigger = "analyzesys.main:run_with_trigger_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
